--- a/static/css/css.css
+++ b/static/css/css.css
@@ -1,9 +1,8 @@
 .painel {width:320px; height:320px; margin:0 auto; position:relative; background:#222; padding:20px; border-radius:50%;}
 .color {width:150px; height:150px; position:absolute; cursor:pointer}
-.color.on {box-shadow:0 0 50px rgba(255,255,255,0.5) inset;
+.color.on,.color:active {box-shadow:0 0 50px rgba(255,255,255,0.5) inset;
 	-webkit-transition:box-shadow .1s linear;
 }
-.color:active {box-shadow:0 0 50px rgba(0,0,0,0.65) inset}
 
 .green {top:20px; left:20px; background:green; border-radius:180px 0 0 0}
 .green.on {
